// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.protocol.v2;

import "com/digitalasset/canton/protocol/v0/participant_transaction.proto";
import "com/digitalasset/canton/protocol/v0/synchronization.proto";
import "com/digitalasset/canton/protocol/v0/topology.proto";
import "com/digitalasset/canton/protocol/v1/participant_transaction.proto";
import "com/digitalasset/canton/protocol/v1/participant_transfer.proto";
import "com/digitalasset/canton/protocol/v1/topology.proto";
import "scalapb/scalapb.proto";

// Messages depending on both participant_transaction.proto and participant_transfer.proto.

message EnvelopeContent {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";

  oneof some_envelope_content {
    v1.InformeeMessage informee_message = 1;
    v0.SignedProtocolMessage signed_message = 2;
    v1.EncryptedViewMessage encrypted_view_message = 3;
    v1.DomainTopologyTransactionMessage domain_topology_transaction_message = 5;
    v1.TransferOutMediatorMessage transfer_out_mediator_message = 6;
    v1.TransferInMediatorMessage transfer_in_mediator_message = 7;
    v0.RootHashMessage root_hash_message = 8;
    v0.RegisterTopologyTransactionRequest register_topology_transaction_request = 9;
    v1.RegisterTopologyTransactionResponse register_topology_transaction_response = 10;
    // Removed field causality_update in v2
  }
}
